Bug 1916137 - Do not allow SmoothMsdScrollAnimation to trigger scroll handoff or overscroll. r=hiro

Differential Revision: https://phabricator.services.mozilla.com/D222195